--- a/Skynet-CHashtag/Skynet-CHashtag.csproj
+++ b/Skynet-CHashtag/Skynet-CHashtag.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01169" />
       <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01169" />
       <PackageReference Include="OpenAI.Net" Version="1.0.2" />
+      <PackageReference Include="Tomlyn" Version="0.15.0" />
     </ItemGroup>
 
 </Project>
